--- a/producto.html
+++ b/producto.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Registro de producto</h1>
-    <form action="ResultadoFormulario.html" method="post">
+    <form action="ResultadoFormulario.html" method="post" novalidate>
       <label>Código:</label>
       <input type="text" id="codigo" name="codigo" />
 
