--- a/producto.html
+++ b/producto.html
@@ -3,45 +3,64 @@
   <head>
     <title>Formulario</title>
     <link rel="stylesheet" href="css/style2.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <h1>Registro de producto</h1>
-    <form action="ResultadoFormulario.html" method="post" novalidate>
-      <label>Código:</label>
-      <input type="text" id="codigo" name="codigo" />
+    <form
+      class="needs-validation"
+      action="ResultadoFormulario.html"
+      method="post"
+      novalidate
+    >
+      <label class="form-label">Código:</label>
+      <input type="text" id="codigo" name="codigo" required />
+      <div class="valid-feedback">Ok!</div>
 
       <br /><br />
-      <label>Descripción:</label>
-      <input type="text" id="descripcion" name="descripcion" />
+      <label class="form-label">Descripción:</label>
+      <input type="text" id="descripcion" name="descripcion" required />
+      <div class="valid-feedback">Ok!</div>
 
       <br /><br />
-      <label>Código de barra:</label>
-      <input type="text" id="barra" name="codbarra" />
+      <label class="form-label">Código de barra:</label>
+      <input type="number" id="barra" name="codbarra" required />
+      <div class="invalid-feedback">Inserte codigo de barra</div>
+      <div class="valid-feedback">Ok!</div>
 
       <br /><br />
-      <label>Precio unitario:</label>
-      <input type="text" id="precio" name="precio" />
+      <label class="form-label">Precio unitario:</label>
+      <input type="number" id="precio" name="precio" required />
+      <div class="invalid-feedback">Inserte precio</div>
 
       <br /><br />
-      <label>Stock:</label>
-      <input type="text" id="stock" name="stock" />
+      <label class="form-label">Stock:</label>
+      <input type="number" id="stock" name="stock" required />
+      <div class="invalid-feedback">Inserte cantidad</div>
 
       <br /><br />
-      <label>Proveedor:</label>
-      <input type="text" id="proveedor" name="proveedor" />
+      <label class="form-label">Proveedor:</label>
+      <input type="text" id="proveedor" name="proveedor" required />
+      <div class="invalid-feedback">Ingrese proveedor</div>
 
       <br /><br />
-      <label>Estado:</label>
+      <label class="form-label">Estado:</label>
       <input type="checkbox" id="estado" name="estado" />Activo
 
       <br /><br />
-      <label>Categoría:</label>
-      <select name="select">
+      <label class="form-label">Categoría:</label>
+      <select name="select" required>
         <option value="categoria0">Selecciona categoría</option>
         <option value="categoria1">Categoria 1</option>
         <option value="categoria2">Categoria 2</option>
         <option value="categoria3">Categoria 3</option>
       </select>
+
       <br /><br /><br />
       <input type="submit" id="btnguardar" value="Guardar" />
       <input
@@ -52,5 +71,29 @@
       />
       <br /><br /><br />
     </form>
+    <script>
+      (function () {
+        "use strict";
+
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.querySelectorAll(".needs-validation");
+
+        // Loop over them and prevent submission
+        Array.prototype.slice.call(forms).forEach(function (form) {
+          form.addEventListener(
+            "submit",
+            function (event) {
+              if (!form.checkValidity()) {
+                event.preventDefault();
+                event.stopPropagation();
+              }
+
+              form.classList.add("was-validated");
+            },
+            false
+          );
+        });
+      })();
+    </script>
   </body>
 </html>
